--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
     </h1>
   </div>
 
-  <%= render '/devise/shared/error_messages', model: f.object %>
+  <%= render 'devise/shared/error_messages', model: @user %>
   
 
   <div class="form-group">
