--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= render "/devise/shared/second-header"%>
+<%= render "shared/second-header"%>
 
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
 <div class='form-wrap'>
@@ -8,7 +8,7 @@
     </h1>
   </div>
 
-  <%= render 'devise/shared/error_messages', model: @user %>
+  <%= render 'shared/error_messages', model: @user %>
   
 
   <div class="form-group">
@@ -102,4 +102,4 @@
 </div>
 <% end %>
 
-<%= render "/devise/shared/second-footer"%>
+<%= render "shared/second-footer"%>
